<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">태그보아</string>
    <string name="action_settings">Settings</string>
    <string name="menuDownloadDatabase">원본데이터 받기</string>
    <string name="menuAbout">이 앱에 대하여</string>
    <string name="title_activity_register_facebook">RegisterFacebookActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">1453066991603071</string>
    <string name="checkBoxLegalAgreement">약관에 동의합니다.</string>
    <string name="buttonViewLegalTerms">약관 보기</string>
    <string name="buttonRegisterSubmit">바풀 회원으로 시작</string>
    <string name="textFacebookAuthenticateSuccess">%s님, 페이스북 인증이 성공했습니다.</string>
    <string name="textFacebookAuthenticateFailure">페이스북 인증에 실패했습니다.</string>
    <string name="textFacebookRegisterDescription">바풀에서 사용하실 아이디를 만들어주세요.</string>
    <string name="errorFacebookConnection">페이스북 통신에 문제가 있습니다.</string>
    <string name="toastFacebookRegisterWithLoginError">존재하는 아이디 또는 이미 회원일 경우 잘못된 비밀번호입니다.</string>
    <string name="errorAddFacebookAuth">이미 페이스북 계정과 연동되어 있습니다.</string>
    <string name="buttonFacebookRegisterAccountExist">이미 바풀 계정이 있습니다.</string>
    <string name="buttonFacebookRegisterNewUser">바풀을 이용한 적이 없습니다</string>
    <string name="textFacebookRegisterSelectOther">다른 선택</string>
    <string name="textFacebookRegisterCurrentAccount">기존에 사용하신 바풀 아이디를 입력해주세요.</string>
    <string name="buttonFacebookRegisterSelectOne">다음 중 하나를 선택해주세요.</string>
    <string name="textFacebookRegisterPrecheck">페이스북 인증 중입니다. 잠시만 기다려주세요...</string>
    <string name="messageFacebookLogin">Facebook으로 로그인</string>
    <string name="titlePrivacyPolicy">개인정보 보호정책</string>
    <string name="titleAgreement">이용약관</string>
    <string name="kakao_app_key">5b0c238cd64d6465042b39cbb5e24fa1</string>
    <string name="kakao_scheme">kakao5b0c238cd64d6465042b39cbb5e24fa1</string>
    <string name="kakaostory_host">kakaostory</string>
    <string name="validationContent">내용을 입력해주세요</string>
    <string name="validationPasswordMismatch">입력하신 비밀번호가 서로 다릅니다</string>
    <string name="validationRegisterSchool">소속을 선택해주세요</string>
    <string name="validationRegisterYear">학년을 선택해주세요</string>
    <string name="validationQuestionSeq">문제 선택이 잘못됐습니다</string>
    <string name="validationTag">연관 개념을 입력해주세요</string>
    <string name="validationUserBirthDay">생일을 입력해주세요</string>
    <string name="validationUserEmail">이메일을 입력해주세요</string>
    <string name="validationUserId">아이디를 입력해주세요</string>
    <string name="validationUserIdExist">아이디가 이미 존재합니다.</string>
    <string name="validationUserIdLength6">아이디를 6글자 이상 입력해주세요</string>
    <string name="validationUserIdAndPasswordMatch">아이디와 비밀번호는 달라야 합니다</string>
    <string name="validationUserIdType">아이디는 영어와 숫자만 사용해야 합니다</string>
    <string name="validationUserLevel">소속을 입력해주세요</string>
    <string name="validationUserName">이름을 입력해주세요</string>
    <string name="validationUserPasswd">비밀번호를 입력해주세요</string>
    <string name="validationUserPasswdLength6">비밀번호를 6글자 이상 입력해주세요</string>
    <string name="validationUserSex">성별을 입력해주세요</string>
    <string name="validationRegisterSelectTopics">관심있는 연관개념을 2개 이상 선택해주세요.</string>
    <string name="validationPostContentNothing">글 또는 이미지를 작성해주세요.</string>
    <string name="validationIdCheckFailure">아이디 중복 확인이 안되었습니다. 희망하는 아이디를 다시 적어주세요.</string>
    <string name="validationAgreementCheck">약관에 동의가 필요합니다.</string>
    <string name="errorConnection">서버 또는 네트워크에 문제가 있습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="errorImageLoad">이미지를 불러오는 중에 문제가 있습니다.</string>
    <string name="buttonLogin">로그인</string>
    <string name="hintPassword">비밀번호</string>
    <string name="hintId">아이디 (최소5자)</string>
    <string name="hintRegister">가입하기</string>
    <string name="infoRegisterSuggestion">아이디와 비밀번호만으로 가입</string>
    <string name="infoFindPassword">비밀번호 찾기</string>
    <string name="infoPrivacyPolicy">개인정보 보호정책</string>
    <string name="title_activity_privacy_policy">개인정보보호정책</string>
    <string name="title_activity_video_player">동영상</string>
	<string name="errorLogin">로그인에 문제가 있습니다.</string>
    <string name="buttonProfile">내 프로필</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="ptr_pull_to_refresh">당겨서 새로고침…</string>
    <string name="ptr_refreshing">불러오는 중…</string>
    <string name="ptr_release_to_refresh">당겨서 새로고침…</string>
    <string name="load_more_text">. . .</string>
    <string name="toastLoadNothing">더 이상 불러올 내용이 없습니다.</string>
    <string name="errorPlayingVideo">영상 재생에 문제가 있습니다. 다시 시도해주세요.</string>
    <string name="errorFetchData">조회 실패</string>
    <string name="errorIncorrectIdOrPassword">아이디 또는 비밀번호가 틀렸습니다.</string>
    <string name="menuLogout">로그아웃</string>
    <string name="title_login">로그인</string>
    <string name="buttonFacebookConnect">Connect</string>
    <string name="buttonInputComplete">입력 완료</string>
    <string name="errorInternalServerError">서버에서 무언가 문제가 발생했습니다. 곧 수정하겠습니다.</string>
    <string name="errorValidationTitleEmpty">제목을 적어주세요.</string>
    <string name="buttonNewItem">새 콘텐츠 입력</string>
    <string name="dialogConfirmDeleteItem">이 콘텐츠를 삭제할까요?</string>
    <string name="toastDeleteComplete">삭제 완료</string>
    <string name="errorUrlResolverFail">영상 주소가 잘못되었습니다.</string>
    <string name="errorDestinationVideoServerUnreachable">동영상 제공자에 접속할 수 없습니다.</string>

</resources>
